# simuStocks

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
scripts/: format-import.sh  format.sh  lint.sh
simustocks/: __init__.py  check_simulation.py  demo.ipynb  errors.py  simulation.py  stocks.py
tests/: test_simulation.py  test_simustocks.py
