[tool.poetry]
name = "simustocks"
version = "0.1.0"
description = "Simulate some stocks prices knowing their historical covariance and a given anual expected returns."
authors = ["ggelabert <ggelabert@serikat.es>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandera = "^0.13.4"
pydantic = "^1.10.2"
pandas-datareader = "^0.10.0"

[tool.poetry.dev-dependencies]
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"


[tool.poetry.group.docs.dependencies]
ipykernel = "^6.19.2"
matplotlib = "^3.6.2"
black = {extras = ["jupyter"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
